# oreilly-ai-agents-gcp

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
module_1/code/lab2/my_first_agent/: agent.py  run_programmatically.py
module_1/labs/: lab_1.md  lab_2.md
module_2/labs/: lab_1.md  lab_2.md  lab_3.md
module_3/code/lab1/my_agent_with_memory/: run_agent.py
module_3/code/lab2/shopping_agent/: agent.py
module_3/code/lab3/field_notebook/: agent.py
module_3/labs/: lab_1.md  lab_2.md  lab_3.md
module_4/code/lab1/coordinator_pattern/: agent.py
module_4/code/lab1/hierarchical_pattern/: agent.py
module_4/code/lab1/human_loop_pattern/: agent.py
module_4/code/lab1/loop_pattern/: agent.py
module_4/code/lab1/parallel_pattern/: agent.py
module_4/code/lab1/sequential_pattern/: agent.py
module_4/labs/: lab_1.md  lab_2.md
module_5/labs/: lab_1.md
module_5/solution/: README.md  agent.py  config.py  policy.json
module_5/solution/subagents/checker/: __init__.py  checker_agent.py  prompt.py
module_5/solution/subagents/image/: imagen_agent.py  prompt.py
module_5/solution/subagents/prompt/: prompt.py  prompt_agent.py
module_5/solution/subagents/scoring/: __init__.py  prompt.py  scoring_agent.py
module_5/solution/subagents/tools/: fetch_policy_tool.py
module_6/labs/: lab_1.md  lab_2.md  lab_3.md
module_7/code/home_automation_agent/: agent.py  integration.evalset.json  test_config.json  ui_tests.evalset.json
module_7/labs/: lab_1.md  lab_2.md  lab_3.md  lab_4.md
module_8/labs/: lab_1.md  lab_2.md  lab_3.md
(+24 files in other folders)
